Wrote new middleware verifyFileUploadContentType and new db helper method insertTestimonyFile to support POST /testimonies/:id/files endpoint, and updated OpenAPI spec to include another error response for that endpoint.
